--- a/严选pc版.html
+++ b/严选pc版.html
@@ -55,7 +55,7 @@
 					<li><a href="#">首页</a></li>
 					<li>
 						<a href="#">居家</a>
-						<div class="sub_nav1">
+						<div class="sub_nav">
 							<ul>
 								<li>
 									<div class="img"></div>
@@ -108,12 +108,301 @@
 							</ul>
 						</div>
 					</li>
-					<li><a href="#">鞋包配饰</a></li>
-					<li><a href="#">服装</a></li>
-					<li><a href="#">电器</a></li>
-					<li><a href="#">洗护</a></li>
-					<li><a href="#">饮食</a></li>
-					<li><a href="#">餐厨</a></li>
+					<li>
+						<a href="#">鞋包配饰</a>
+						<div class="sub_nav">
+							<ul>
+								<li>
+									<div class="img"></div>
+									<a href="#">行李箱</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">女士包袋</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">男士包袋</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">钱包及小皮件</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">女鞋</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">男鞋</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">拖鞋</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">鞋配</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">袜子</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">丝袜</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">配饰</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">眼镜</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">围巾件套</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="#">服装</a>
+						<div class="sub_nav">
+							<ul>
+								<li>
+									<div class="img"></div>
+									<a href="#">Yessing轻运动</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">T恤</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">运动</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">牛仔</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">女士上装</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">女士外套</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">女士下装</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">男士上装</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">男士下装</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">男士外套</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">男士内衣内裤</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">女士内衣内裤</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">男士居家服</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">女士居家服</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="#">电器</a>
+						<div class="sub_nav">
+							<ul>
+								<li>
+									<div class="img"></div>
+									<a href="#">生活电器</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">厨房电器</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">个人健康</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">数码</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">影音娱乐</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="#">洗护</a>
+						<div class="sub_nav">
+							<ul>
+								<li>
+									<div class="img"></div>
+									<a href="#">纸品湿巾</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">家庭清洁</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">生理用品</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">浴室用具</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">毛巾</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">美妆</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">香氛</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">面部口腔护理</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">身体护理</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">洗发护发</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="#">饮食</a>
+						<div class="sub_nav">
+							<ul>
+								<li>
+									<div class="img"></div>
+									<a href="#">甜品鲜花</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">糕点</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">小食</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">坚果炒货</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">果干</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">肉类零食</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">冲饮</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">茗茶</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">酒水饮料</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">方便食品</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">食材</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">调味</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">滋补保健</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">生鲜</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="#">餐厨</a>
+						<div class="sub_nav">
+							<ul>
+								<li>
+									<div class="img"></div>
+									<a href="#">水具杯壶</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">餐具</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">锅具</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">清洁保鲜</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">厨房配件</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">刀剪砧板</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">茶具咖啡具酒具</a>
+								</li>
+								
+							</ul>
+						</div>
+					</li>
 					<li><a href="#">婴童</a></li>
 					<li><a href="#">文体</a></li>
 					<li><a href="#">特色区</a></li>
