--- a/严选pc版.html
+++ b/严选pc版.html
@@ -399,13 +399,174 @@
 									<div class="img"></div>
 									<a href="#">茶具咖啡具酒具</a>
 								</li>
-								
 							</ul>
 						</div>
 					</li>
-					<li><a href="#">婴童</a></li>
-					<li><a href="#">文体</a></li>
-					<li><a href="#">特色区</a></li>
+					<li>
+						<a href="#">婴童</a>
+						<div class="sub_nav">
+							<ul>
+								<li>
+									<div class="img"></div>
+									<a href="#">暑期好物</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">新生儿服装</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">小童服装</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">中大童服装</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">内衣搭配</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">童鞋童包</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">婴童洗护</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">孕产</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">寝局</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">喂养</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">玩具</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">婴童出行</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="#">文体</a>
+						<div class="sub_nav">
+							<ul>
+								<li>
+									<div class="img"></div>
+									<a href="#">文具</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">运动户外</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">唱片</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">礼品卡</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">游戏点卡</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">暴雪周边</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">我的世界</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">梦幻西游</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">大话西游</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">阴阳师</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">游戏表情</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">影视周边</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">动漫电玩</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="#">特色区</a>
+						<div class="sub_nav">
+							<ul>
+								<li>
+									<div class="img"></div>
+									<a href="#">日本馆</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">韩国馆</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">东南亚馆</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">欧美馆</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">澳新馆</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">智造馆</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">春风馆</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">未央馆</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">云音乐周边馆</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">Yessing馆</a>
+								</li>
+								<li>
+									<div class="img"></div>
+									<a href="#">严选推荐馆</a>
+								</li>
+							</ul>
+						</div>
+					</li>
 					<li><a href="#">为你严选</a></li>
 					<li><a href="#">众筹</a></li>
 				</ul>
