--- a/严选pc版.html
+++ b/严选pc版.html
@@ -6,8 +6,36 @@
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/yanxuanpc.css">
 	<link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.css">
+	<link rel="stylesheet" href="./font_e958uhno91t/iconfont.css">
 </head>
 <body>
+	<div class="guding">
+		<div class="dongtu">
+			<img src="./images/guding/dongtu.gif" alt="">
+		</div>
+		<div class="xinren">
+			<a href="#">
+				<div class="img">
+					<i class="fa fa-gift"></i>
+				</div>
+				<div class="font">新人有礼</div>
+			</a>
+		</div>
+		<div class="erweima">
+			<a href="#">
+				<img src="./images/guding/下载.png" alt="">
+			</a>
+		</div>
+		<div class="saomaling">
+			<a href="#">
+				<div class="saoma">
+					扫码领
+					<p>APP1000元</p>
+					<p>新人礼</p>
+				</div>
+			</a>
+		</div>
+	</div>
 	<div class="header">
 		<div class="top_nav">
 			<div class="wrap">
@@ -602,22 +630,30 @@
 								<div class="name">
 									<span>CK制造商</span>
 								</div>
-								<div class="price">
+								<div class="pricebig">
+									<div class="price">
 									25元起
+									</div>
 								</div>
 							</div>
-							<div class="img"></div>
+							<div class="img">
+								<img src="./images/content2/content2_link_li1.png" alt="">
+							</div>
 						</li>
 						<li>
 							<div class="font">
 								<div class="name">
 									<span>Nine West制造商</span>
 								</div>
-								<div class="price">
-									209元起
+								<div class="pricebig">
+									<div class="price">
+										209元起
+									</div>
 								</div>
 							</div>
-							<div class="img"></div>
+							<div class="img">
+								<img src="./images/content2/content2_link_li2.png" alt="">
+							</div>
 						</li>
 						<li>
 							<div class="font">
@@ -628,7 +664,9 @@
 									9.9元起
 								</div>
 							</div>
-							<div class="img"></div>
+							<div class="img">
+								<img src="./images/content2/content2_link_li3.png" alt="">
+							</div>
 						</li>
 						<li>
 							<div class="font">
@@ -639,7 +677,9 @@
 									49元起
 								</div>
 							</div>
-							<div class="img"></div>
+							<div class="img">
+								<img src="./images/content2/content2_link_li4.png" alt="">
+							</div>
 						</li>
 					</ul>
 				</div>
@@ -684,6 +724,9 @@
 								<ul>
 									<li>
 										<img src="./images/content3/content3_link_li2_1.png" alt="">
+										<div class="little">
+											<a href="#">2色可选</a>
+										</div>
 									</li>
 									<li>
 										<img src="./images/content3/content3_link_li2_2.jpg" alt="">
@@ -705,6 +748,9 @@
 								<ul>
 									<li>
 										<img src="./images/content3/content3_link_li3_1.png" alt="">
+										<div class="little">
+											<a href="#">韩国设计</a>
+										</div>
 									</li>
 									<li>
 										<img src="./images/content3/content3_link_li3_2.jpg" alt="">
@@ -2083,6 +2129,9 @@
 					<a href="#" class="a1"><h3>大家都在说</h3></a>
 					<span>生活没有统一标准</span>
 				</div>
+				<div class="left_button">
+					<i class="fa fa-chevron-circle-left"></i>
+				</div>
 				<div class="link">
 					<ul>
 						<li>
@@ -2097,15 +2146,258 @@
 									</div>
 									<div class="name">
 										<span>半年囤货装 30包450片 云感卫生巾</span>
+										<span>￥308</span>
+									</div>
+									<div class="neirong">
+										<p>大大的一箱，买了半天囤货装，买来正好可以用上，自从有了严选再也没用其他品牌的卫生巾了哦</p>
 									</div>
 								</div>
 							</div>
 						</li>
-						<li></li>
-						<li></li>
+						<li>
+							<div class="img">
+								<img src="./images/content18/link_ul_li2.jpg" alt="">
+							</div>
+							<div class="font">
+								<div class="big">
+									<div class="people">
+										<span>S****n</span>
+										<span>2018-08-13 13:02</span>
+									</div>
+									<div class="name">
+										<span>俄罗斯制造 木瓜生物活性牙膏</span>
+										<span>￥29</span>
+									</div>
+									<div class="neirong">
+										<p>入口即化的感觉，不像其他牙膏那样有胶体，开始感觉可能刷不干净，但是用了一段时间了 感觉很不错，清凉感持久</p>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img">
+								<img src="./images/content18/link_ul_li3.jpg" alt="">
+							</div>
+							<div class="font">
+								<div class="big">
+									<div class="people">
+										<span></span>
+										<span>2018-08-13 11:51</span>
+									</div>
+									<div class="name">
+										<span>金属跟搭带女跟鞋</span>
+										<span>￥299</span>
+									</div>
+									<div class="neirong">
+										<p>女朋友穿着很舒服 很软 不会磨脚搭配裙子整个人都变瘦了 强烈推荐！！</p>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img">
+								<img src="./images/content18/link_ul_li4.jpg" alt="">
+							</div>
+							<div class="font">
+								<div class="big">
+									<div class="people">
+										<span>l****3</span>
+										<span>2018-08-13 17:53</span>
+									</div>
+									<div class="name">
+										<span>日本制造 芝心小脆芙</span>
+										<span>￥12.9</span>
+									</div>
+									<div class="neirong">
+										<p>好吃，有点点流心的</p>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img">
+								<img src="./images/content18/link_ul_li5.jpg" alt="">
+							</div>
+							<div class="font">
+								<div class="big">
+									<div class="people">
+										<span>勿****心</span>
+										<span>2018-08-13 14:03</span>
+									</div>
+									<div class="name">
+										<span>炭火烤肠 150克</span>
+										<span>￥18</span>
+									</div>
+									<div class="neirong">
+										<p>腊味类，香肠类的食品，我个人一直喜欢吃，由于国内腊味的品质用料一直让人担心（你懂的），比较少买，特别，特别，特别 馋的时候，才会冒险购买解馋，这次尝试购买了炭火烤肠，拆了包装，立马品尝了1个，然后不小心吃了快5,6个（哈哈），味道很不错！烤肠用料一定要如你（网易严选）所说的放心!!!</p>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img">
+								<img src="./images/content18/link_ul_li6.jpg" alt="">
+							</div>
+							<div class="font">
+								<div class="big">
+									<div class="people">
+										<span>s****e</span>
+										<span>2018-08-13 12:45</span>
+									</div>
+									<div class="name">
+										<span>综合果蔬脆 100克</span>
+										<span>￥16</span>
+									</div>
+									<div class="neirong">
+										<p>很用心的产品，看着就是精挑细选出来的。发货速度一般，不过买的几样都很好吃。很多种水果蔬菜，不油腻，很脆很好吃！</p>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img">
+								<img src="./images/content18/link_ul_li7.jpg" alt="">
+							</div>
+							<div class="font">
+								<div class="big">
+									<div class="people">
+										<span>1****3</span>
+										<span>2018-08-13 19:22</span>
+									</div>
+									<div class="name">
+										<span>全棉针织条纹四件套 新款</span>
+										<span>￥299</span>
+									</div>
+									<div class="neirong">
+										<p>因为农农代言了yessing,认识了严选，看了看其他宝贝，好像都还不错。</p>
+									</div>
+								</div>
+							</div>
+						</li>
 					</ul>
 				</div>
+				<div class="right_button">
+					<i class="fa fa-chevron-circle-right"></i>
+				</div>
 			</div>	
+		</div>
+		<div class="content19">
+			<div class="wrap">
+				<div class="link">
+					<ul>
+						<li>
+							<h4>客户服务</h4>
+							<div class="bottom">
+								<ul>
+									<li>
+										<div>
+											<a href="">
+												<i class="iconfont icon-kefu"></i>
+												<div class="name">在线客服</div>
+											</a>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a href="">
+												<i class="iconfont icon-taolun"></i>
+												<div class="name">用户反馈</div>
+											</a>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</li>
+						<li>
+							<div class="littlewrap">
+								<h4>何为严选</h4>
+								<p>网易原创生活类电商品牌，秉承网易一贯的严谨态度，我们深入世界各地，从源头全程严格把控商品生产环节，力求帮消费者甄选到优质的商品</p>
+								<div class="guanzhu">
+									<span>关注我们：</span>
+									<div class="tubiao">
+										<a href="#">
+											<i class="iconfont icon-weixin"></i>
+											<div class="erweima">
+												<img src="./images/content19/二维码.png" alt="">
+										 	</div>
+										</a>
+										
+										<a href="#">
+											<i class="iconfont icon-weibo"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li>
+							<h4>扫码下载严选APP</h4>
+							<div class="img">
+								<img src="./images/content19/下载.png" alt="">
+							</div>
+							<div class="word">下载领1000元新人礼包</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>	
+	</div>
+	<div class="footer">
+		<div class="wrap">
+			<div class="tubiao">
+				<ul>
+					<li>
+						<div class="littlewrap">
+							<div>
+								<i class="iconfont icon-baozhang"></i>
+							</div>
+							<span>30天无忧退换货</span>
+						</div>
+					</li>
+					<li>
+						<div class="littlewrap">
+							<div>
+								<i class="iconfont icon-songhuo"></i>
+							</div>
+							<span>满88免邮费</span>
+						</div>
+					</li>
+					<li>
+						<div class="littlewrap">
+							<div>
+								<i class="iconfont icon-iconfontwangyi"></i>
+							</div>
+							<span>网易品质保证</span>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="line"></div>
+			<div class="link">
+				<div class="topul">
+					<ul>
+						<li><a href="#">关于我们</a></li>
+						<li><a href="#">帮助中心</a></li>
+						<li><a href="#">售后服务</a></li>
+						<li><a href="#">配送与验收</a></li>
+						<li><a href="#">商务合作</a></li>
+						<li><a href="#">企业采购</a></li>
+						<li><a href="#">开放平台</a></li>
+						<li><a href="#">搜索推荐</a></li>
+						<li><a href="#">友情链接</a></li>
+					</ul>
+				</div>
+				<div class="bottomp">
+					<span>网易公司版权所有 © 1997-2018&nbsp;</span>
+					<a href="#">食品经营许可证：JY13301080111719</a>
+					<a href="#">出版物经营许可证：新出发滨字第0132号</a>
+					<a href="#">单用途商业预付卡备案证：330100AAC0024</a>
+				</div>
+				<div class="gongan">
+					<a href="#">
+						<img src="./images/公安.gif" alt="">
+					</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
