--- a/严选首页.html
+++ b/严选首页.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>严选pc版</title>
+	<title>严选首页</title>
 	<link rel="stylesheet" href="./css/common.css">
-	<link rel="stylesheet" href="./css/yanxuanpc.css">
+	<link rel="stylesheet" href="./css/yanxuanshouye.css">
 	<link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.css">
 	<link rel="stylesheet" href="./font_e958uhno91t/iconfont.css">
+	<link rel="stylesheet" href="./font_vf5vve0uqt/iconfont.css">
+	<link rel="stylesheet" href="./css/yanxuancommon.css">
 </head>
 <body>
 	<div class="guding">
@@ -35,8 +37,58 @@
 				</div>
 			</a>
 		</div>
+		<div class="dingyue">
+			<a href="#">
+				<div class="img">
+					<i class="fa fa-feed"></i>
+				</div>
+				<div class="font">订阅电子刊</div>
+				<div class="left">
+					<div class="headname">严选生活美学</div>
+					<div class="font">
+						<div class="topfont">订阅电子刊，第一时间获取严选最新资讯
+						</div>
+						<div class="inputkuang">
+							<input type="text" name="shuruemail" placeholder="输入您的电子邮件">
+							<i class="fa fa-close"></i>
+							<div class="button">
+								立即订阅
+							</div>
+						</div>
+						<div class="bottomul">
+							<ul>
+								<li>
+									<i class="iconfont icon-biaoqian"></i>
+									<span>专属优惠</span>
+								</li>
+								<li>
+									<i class="iconfont icon-huangguan"></i>
+									<span>尊享优先购</span>
+								</li>
+								<li>
+									<i class="iconfont icon-bao"></i>
+									<span>好货不错过</span>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</a>
+		</div>
+		<div class="zaixian">
+			<a href="#">
+				<i class="iconfont icon-kefu"></i>
+				<p>在线客服</p>
+			</a>
+		</div>
+		<div class="back">
+			<a href="#head">
+				<i class="fa fa-angle-up"></i>
+				<p>回顶部</p>
+			</a>
+		</div>
 	</div>
-	<div class="header">
+	<div class="header" id="head">
 		<div class="top_nav">
 			<div class="wrap">
 				<div class="left">
@@ -2274,14 +2326,55 @@
 								</div>
 							</div>
 						</li>
+						<li>
+							<div class="img">
+								<img src="./images/content18/link_ul_li7.jpg" alt="">
+							</div>
+							<div class="font">
+								<div class="big">
+									<div class="people">
+										<span>1****3</span>
+										<span>2018-08-13 19:22</span>
+									</div>
+									<div class="name">
+										<span>全棉针织条纹四件套 新款</span>
+										<span>￥299</span>
+									</div>
+									<div class="neirong">
+										<p>因为农农代言了yessing,认识了严选，看了看其他宝贝，好像都还不错。</p>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img">
+								<img src="./images/content18/link_ul_li7.jpg" alt="">
+							</div>
+							<div class="font">
+								<div class="big">
+									<div class="people">
+										<span>1****3</span>
+										<span>2018-08-13 19:22</span>
+									</div>
+									<div class="name">
+										<span>全棉针织条纹四件套 新款</span>
+										<span>￥299</span>
+									</div>
+									<div class="neirong">
+										<p>因为农农代言了yessing,认识了严选，看了看其他宝贝，好像都还不错。</p>
+									</div>
+								</div>
+							</div>
+						</li>
 					</ul>
 				</div>
 				<div class="right_button">
 					<i class="fa fa-chevron-circle-right"></i>
 				</div>
 			</div>	
-		</div>
-		<div class="content19">
+		</div>	
+	</div>
+	<div class="topfooter">
 			<div class="wrap">
 				<div class="link">
 					<ul>
@@ -2339,7 +2432,6 @@
 					</ul>
 				</div>
 			</div>
-		</div>	
 	</div>
 	<div class="footer">
 		<div class="wrap">
