--- a/严选居家-夏凉-牛皮席三件套.html
+++ b/严选居家-夏凉-牛皮席三件套.html
@@ -657,7 +657,12 @@
 	<div class="container">
 		<div class="content1">
 			<div class="wrap">
-				<div class="title"></div>
+				<div class="title">
+					<span><a href="严选首页.html">首页</a> ></span>
+					<span><a href="严选居家.html">居家</a> ></span>
+					<span><a href="#">夏凉</a> ></span>
+					<span><a href="#">新色 奢华植鞣头层水牛皮席三件套</a></span>
+				</div>
 				<div class="bottom">
 					<div class="photo">
 						<ul>
@@ -693,7 +698,120 @@
 							</li>
 						</ul>
 					</div>
-					<div class="desc"></div>
+					<div class="desc">
+						<div class="top">
+							<div class="title">
+								<div class="toptitle titlename">
+									新色 奢华植鞣头层水牛皮席三件套
+								</div>
+								<div class="subtitle sub-title">三峡水牛头层皮，高端夏凉必备</div>
+							</div>
+							<div class="haoping">
+								<div class="fenshu color1 titlename">97.3%</div>
+								<div class="name">好评率</div>
+							</div>
+						</div>
+						<div class="xianshi">
+							<div class="toptitle">
+								<span>限时购</span>
+								<span>低至¥2024.3  距优惠开抢  </span>
+								<span>03时47分40秒</span>
+							</div>
+							<div class="bottomneirong">
+								<table>
+									<tr>
+										<td>价格</td>
+										<td>
+											<span class="color1">￥</span>
+											<span class="color1">2499</span>
+											<span>超级会员专享价¥2374.10</span>
+											<a href="#">开通即享 ></a>
+										</td>
+									</tr>
+									<tr>
+										<td>领券</td>
+										<td>
+											<span class="color1">七夕满777减117</span>
+											<span class="color1">七夕每满477减77</span>
+											<span class="color1">七夕每满177减27</span>
+											<a href="#" class="color1">立即领取 ></a>
+										</td>
+									</tr>
+									<tr>
+										<td>促销</td>
+										<td>
+											<span class="manejian">满额减</span>
+											<a href="#" class="color1">满300元减100元</a>
+										</td>
+									</tr>
+									<tr>
+										<td>积分</td>
+										<td>
+											<span>购买最高得</span>
+											<span>249</span>
+											<span>积分</span>
+										</td>
+									</tr>
+								</table>
+								<div class="fuwu">
+									<div class="top">
+										<span>服务</span>
+										<span>· 支持30天无忧退换货</span>
+										<span>· 48小时快速退款</span>
+										<span>· 满88元免邮费</span>
+									</div>
+									<div class="bottom">
+										<span>· 网易自营品牌</span>
+										<span>· 国内部分地区无法配送</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="tiaoxuan">
+							<table>
+								<tr>
+									<td>颜色</td>
+									<td>
+										<ul>
+											<li><img src="./images/内容/content1/yanse_li1.png" alt=""></li>
+											<li><img src="./images/内容/content1/yanse_li2.png" alt=""></li>
+											<li><img src="./images/内容/content1/yanse_li3.png" alt=""></li>
+											<li><img src="./images/内容/content1/yanse_li4.png" alt=""></li>
+											<li><img src="./images/内容/content1/yanse_li5.png" alt=""></li>
+										</ul>
+									</td>
+								</tr>
+								<tr>
+									<td>尺寸</td>
+									<td>
+										<a href="#">150*200cm</a>
+										<a href="#">180*200cm</a>
+									</td>
+								</tr>
+								<tr>
+									<td>数量</td>
+									<td>
+										<div>
+											<div>-</div>
+											<div>1</div>
+											<div>+</div>
+										</div>
+									</td>
+								</tr>
+							</table>
+						</div>
+						<div class="button">
+							<a href="#" class="color3">立即购买</a>
+							<a href="#" class="color4">
+								<i class="fa fa-shopping-cart color4"></i>
+								加入购物车
+							</a>
+							<a href="#" class="color2">
+								<i class="fa fa-star-o color2"></i>
+								<span>收藏</span>
+							</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
