--- a/严选首页.html
+++ b/严选首页.html
@@ -2328,40 +2328,40 @@
 						</li>
 						<li>
 							<div class="img">
-								<img src="./images/content18/link_ul_li7.jpg" alt="">
+								<img src="./images/content18/link_ul_li8.jpg" alt="">
 							</div>
 							<div class="font">
 								<div class="big">
 									<div class="people">
 										<span>1****3</span>
-										<span>2018-08-13 19:22</span>
+										<span>2018-08-15 18:15</span>
 									</div>
 									<div class="name">
-										<span>全棉针织条纹四件套 新款</span>
-										<span>￥299</span>
+										<span>小龙虾 4-6钱 净虾800克</span>
+										<span>￥98</span>
 									</div>
 									<div class="neirong">
-										<p>因为农农代言了yessing,认识了严选，看了看其他宝贝，好像都还不错。</p>
+										<p>好吃。去年买过几次，味道很不错，但是之前那个有汤汁，小龙虾泡的久显得很黑，现在这个没有那么多汤汁了，能明显看到小龙虾很干净，😊依然很辣很麻，吃着特别爽，个头也不算小，下</p>
 									</div>
 								</div>
 							</div>
 						</li>
 						<li>
 							<div class="img">
-								<img src="./images/content18/link_ul_li7.jpg" alt="">
+								<img src="./images/content18/link_ul_li9.jpg" alt="">
 							</div>
 							<div class="font">
 								<div class="big">
 									<div class="people">
-										<span>1****3</span>
-										<span>2018-08-13 19:22</span>
+										<span>1****8</span>
+										<span>2018-08-17 08:58</span>
 									</div>
 									<div class="name">
-										<span>全棉针织条纹四件套 新款</span>
-										<span>￥299</span>
+										<span>五常稻花香米 5千克</span>
+										<span>￥118</span>
 									</div>
 									<div class="neirong">
-										<p>因为农农代言了yessing,认识了严选，看了看其他宝贝，好像都还不错。</p>
+										<p>中毒很深，现在家里的所有东西，我的所有东西都选严选，希望一直保持好品质。</p>
 									</div>
 								</div>
 							</div>
