内容页面完成

--- a/严选居家-夏凉-牛皮席三件套.html
+++ b/严选居家-夏凉-牛皮席三件套.html
@@ -658,9 +658,9 @@
 		<div class="content1">
 			<div class="wrap">
 				<div class="title">
-					<span><a href="严选首页.html">首页</a> ></span>
-					<span><a href="严选居家.html">居家</a> ></span>
-					<span><a href="#">夏凉</a> ></span>
+					<span><a href="严选首页.html">首页</a> &nbsp;></span>
+					<span><a href="严选居家.html">居家</a> &nbsp;></span>
+					<span><a href="#">夏凉</a> &nbsp;></span>
 					<span><a href="#">新色 奢华植鞣头层水牛皮席三件套</a></span>
 				</div>
 				<div class="bottom">
@@ -815,8 +815,375 @@
 				</div>
 			</div>
 		</div>
+		<div class="content2">
+			<div class="wrap">
+				<div class="title">
+					<span>大家都在看</span>
+				</div>
+				<div class="bottom">
+					<div class="link">
+						<div class="left_button">
+							<i class="fa fa-chevron-circle-left"></i>
+						</div>
+						<ul>
+							<li>
+								<div class="img">
+									<img src="./images/内容/content2/link_ul_li1.png" alt="">
+								</div>
+								<div class="font">
+									<div class="font_top">
+										<!-- <span class="xp">新品</span> -->
+									</div>
+									<div class="name">
+										<a href="">绅雅伯爵牛皮公文包</a>
+									</div>
+									<div class="price">
+										<span>￥129</span>
+										<a href="#"><i class="fa fa-shopping-cart color3"></i></a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<img src="./images/内容/content2/link_ul_li2.png" alt="">
+								</div>
+								<div class="font">
+									<div class="font_top">
+										<span class="manejian">满额减</span>
+									</div>
+									<div class="name">
+										<a href="">升级款双宫茧桑蚕丝被  子母被</a>
+									</div>
+									<div class="price">
+										<span>￥1399</span>
+										<a href="#"><i class="fa fa-shopping-cart color3"></i></a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<img src="./images/内容/content2/link_ul_li3.png" alt="">
+									<div class="xiaobiao">
+										<a href="#">3色可选</a>
+									</div>
+								</div>
+								<div class="font">
+									<div class="font_top">
+										<span class="manejian">满额减</span>
+									</div>
+									<div class="name">
+										<a href="">唤自然 蒙古包蚊帐</a>
+									</div>
+									<div class="price">
+										<span>￥169</span>
+										<a href="#"><i class="fa fa-shopping-cart color3"></i></a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<img src="./images/内容/content2/link_ul_li4.jpg" alt="">
+									<div class="xiaobiao">
+										<a href="#">3色可选</a>
+									</div>
+								</div>
+								<div class="font">
+									<div class="font_top">
+										<span class="bp">七夕推荐</span>
+									</div>
+									<div class="name">
+										<a href="">宫廷奢华真丝四件套</a>
+									</div>
+									<div class="price">
+										<span>￥3399</span>
+										<a href="#"><i class="fa fa-shopping-cart color3"></i></a>
+									</div>
+								</div>
+							</li>
+						</ul>
+						<div class="right_button">
+							<i class="fa fa-chevron-circle-right"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="content3">
+			<div class="wrap">
+				<div class="left">
+					<div class="title">
+						<ul>
+							<li>
+								<div class="name">
+									<a href="#">详情</a>
+								</div>
+								<div class="neirong xq">
+									<div class="chanping">
+										<table>
+											<tr>
+												<td>材质成分</td>
+												<td>席面：头层牛皮革/ 枕套面：头层牛皮革/ 枕套背面：100%聚酯纤维</td>
+											</tr>
+											<tr>
+												<td>尺寸</td>
+												<td>1.5米床：牛皮席：150x200cm/ 枕套：74x48cmx2</td>
+											</tr>
+											<tr>
+												<td></td>
+												<td>1.8米床：牛皮席：180x200cm/ 枕套：74x48cmx2</td>
+											</tr>
+											<tr>
+												<td>鞣制方式</td>
+												<td>铬植结合鞣</td>
+											</tr>
+											<tr>
+												<td>执行标准</td>
+												<td>QB/T 4204-2011</td>
+											</tr>
+										</table>
+										<div class="img">
+											<ul>
+												<li><img src="./images/内容/content3/xq/photot1.jpg" alt="photo1.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot2.jpg" alt="photo2.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot3.jpg" alt="photo3.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot4.jpg" alt="photo4.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot5.jpg" alt="photo5.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot6.jpg" alt="photo6.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot7.jpg" alt="photo7.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot8.jpg" alt="photo8.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot9.jpg" alt="photo9.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot10.jpg" alt="photo10.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot11.jpg" alt="photo11.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot12.jpg" alt="photo12.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot13.jpg" alt="photo13.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot14.jpg" alt="photo14.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot15.jpg" alt="photo15.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot16.jpg" alt="photo16.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot17.jpg" alt="photo17.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot18.jpg" alt="photo18.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot19.jpg" alt="photo19.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot20.jpg" alt="photo20.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot21.jpg" alt="photo21.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot22.jpg" alt="photo22.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot23.jpg" alt="photo23.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot24.jpg" alt="photo24.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot25.jpg" alt="photo25.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot26.jpg" alt="photo26.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot27.jpg" alt="photo27.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot27-1.jpg" alt="photo27-1.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot28.jpg" alt="photo28.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot29.jpg" alt="photo29.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot30.jpg" alt="photo30.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot31.jpg" alt="photo31.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot32.jpg" alt="photo32.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot33.jpg" alt="photo33.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot34.jpg" alt="photo34.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot35.jpg" alt="photo35.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot36.jpg" alt="photo36.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot37.jpg" alt="photo37.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot38.jpg" alt="photo38.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot39.jpg" alt="photo39.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot40.jpg" alt="photo40.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot41.jpg" alt="photo41.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot42.jpg" alt="photo42.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot43.jpg" alt="photo43.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot44.jpg" alt="photo44.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot45.jpg" alt="photo45.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot46.jpg" alt="photo46.jpg"></li>
+												<li><img src="./images/内容/content3/xq/photot47.jpg" alt="photo47.jpg"></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="name">
+									<a href="#">
+										评价
+										<span class="color3">(2605)</span>
+									</a>
+								</div>
+								<div class="neirong pj"></div>
+							</li>
+							<li>
+								<div class="name">
+									<a href="#">质检报告</a>
+								</div>
+								<div class="neirong zjbg"></div>
+							</li>
+							<li>
+								<div class="name">
+									<a href="#">常见问题</a>
+								</div>
+								<div class="neirong cjwt">
+									<ul>
+										<li>
+											<div class="question">
+												购买运费如何收取？
+											</div>
+											<div class="answer">
+												<p>单笔订单金额（不含运费）满88元免邮费；不满88元，每单收取10元运费。</p>
+												<p>(港澳台地区需满500元免邮费；不满500元，每单收取30元运费)</p>
+											</div>
+										</li>
+										<li>
+											<div class="question">
+												网易严选的订单如何配送？
+											</div>
+											<div class="answer">
+												<p>网易严选会根据商品所在地、顾客所在地和商品的尺寸重量优选物流配送商，确保优质用户体验。目前暂不支持自选快递，具体物流信息可在下单成功后“我的订单-追踪物流”中查看。</p>
+											</div>
+										</li>
+										<li>
+											<div class="question">
+												如何申请退换货？
+											</div>
+											<div class="answer">
+												<p>1.自收到商品之日起30日内，顾客可申请无忧退货；如果是退货，退款将原路返还，不同的银行处理时间不同，预计1-5个工作日到账；</p>
+												<p>2.内裤和食品等特殊商品无质量问题不支持退换货；</p>
+												<p>3.退货流程：</p>
+												<p>确认收货-申请退货-客服审核通过-用户寄回商品-仓库签收验货-退款审核-退款完成；</p>
+												<p>4.换货流程：</p>
+												<p>确认收货-申请换货-客服审核通过-用户寄回商品-仓库签收验货-客服确认-换货完成；</p>
+												<p>5.退换货运费由网易严选承担（大件商品除外）。上门取件费用由网易严选统一与快递服务商结算，顾客只需将退换货商品交给上门取件快递员寄回。如顾客选择自行寄回商品，请先垫付运费，到货验证商品后，严选将以现金券形式为用户报销运费，不接受单方面到付件。</p>
+											</div>
+										</li>
+										<li>
+											<div class="question">
+												如何开具发票？
+											</div>
+											<div class="answer">
+												<p>1.请在下单时选择“我要开发票”并填写相关信息（APP仅限2.4.0及以上版本）。开具增值税专用发票需在下单时填写增票资质信息。温馨提示：请确保增票资质信息与贵司税务登记证信息一致，避免因开票信息错误给贵司带来损失。 </p>
+												<p>2.可选开票内容：</p>
+												<p>	依照国税总局开票法规，严选订单开具纸质发票、电子发票，开票内容为明细；礼品卡开票内容为预付卡；增值税专用发票开票内容为明细。</p>
+											</div>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li>
+								<div class="name">
+									<a href="#"></a>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="right">
+					<div class="title">
+						24小时热销榜
+					</div>
+					<div class="neirong">
+						<ul>
+							<li>
+								<div class="img">
+									<img src="./images/内容/content3/right/top/ul_li1.png" alt="">
+								</div>
+								<div class="font">
+									<div class="name">
+										<a href="#">
+											严选礼品卡 100元面值
+										</a>
+									</div>
+									<div class="price">
+										<span>¥</span>
+										<span>100</span>
+										<a href="#"><i class="fa fa-shopping-cart"></i></a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<img src="./images/内容/content3/right/top/ul_li2.png" alt="">
+								</div>
+								<div class="font">
+									<div class="name">
+										<a href="#">
+											海洋水彩系列餐具
+										</a>
+									</div>
+									<div class="price">
+										<span>¥</span>
+										<span>279</span>
+										<a href="#"><i class="fa fa-shopping-cart"></i></a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<img src="./images/内容/content3/right/top/ul_li3.png" alt="">
+								</div>
+								<div class="font">
+									<div class="name">
+										<a href="#">
+											阿瓦提长绒棉超柔毛巾
+										</a>
+									</div>
+									<div class="price">
+										<span>¥</span>
+										<span>23</span>
+										<a href="#"><i class="fa fa-shopping-cart"></i></a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<img src="./images/内容/content3/right/top/ul_li4.png" alt="">
+								</div>
+								<div class="font">
+									<div class="name">
+										<a href="#">
+											玩趣彩虹四季拖鞋
+										</a>
+									</div>
+									<div class="price">
+										<span>¥</span>
+										<span>19.9</span>
+										<a href="#"><i class="fa fa-shopping-cart"></i></a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<img src="./images/内容/content3/right/top/ul_li5.png" alt="">
+								</div>
+								<div class="font">
+									<div class="name">
+										<a href="#">
+											谷风一木 软抽面巾纸
+										</a>
+									</div>
+									<div class="price">
+										<span>¥</span>
+										<span>16.9</span>
+										<a href="#"><i class="fa fa-shopping-cart"></i></a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<img src="./images/内容/content3/right/top/ul_li6.png" alt="">
+								</div>
+								<div class="font">
+									<div class="name">
+										<a href="#">
+											儿童四季拖鞋
+										</a>
+									</div>
+									<div class="price">
+										<span>¥</span>
+										<span>19.9</span>
+										<a href="#"><i class="fa fa-shopping-cart"></i></a>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	<!-- <div class="topfooter">
+	<div class="topfooter">
 			<div class="wrap">
 				<div class="link">
 					<ul>
@@ -933,6 +1300,6 @@
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 </body>
 </html>
