--- a/严选首页.html
+++ b/严选首页.html
@@ -655,6 +655,18 @@
 	</div>
 	<div class="container">
 		<div class="content1">
+			<div class="img">
+				<ul>
+					<li><img src="./images/content1/ul_li1.jpg" alt=""></li>
+					<li><img src="./images/content1/ul_li2.jpg" alt=""></li>
+					<li><img src="./images/content1/ul_li3.jpg" alt=""></li>
+					<li><img src="./images/content1/ul_li4.jpg" alt=""></li>
+					<li><img src="./images/content1/ul_li5.jpg" alt=""></li>
+					<li><img src="./images/content1/ul_li6.jpg" alt=""></li>
+					<li><img src="./images/content1/ul_li7.jpg" alt=""></li>
+					<li><img src="./images/content1/ul_li8.jpg" alt=""></li>
+				</ul>
+			</div>
 			<div class="bottom_button">
 				<ul>
 					<li></li>
