--- a/严选居家-夏凉-牛皮席三件套.html
+++ b/严选居家-夏凉-牛皮席三件套.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>严选居家</title>
+	<title>严选居家·夏凉·牛皮席三件套</title>
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/yanxuanpc.css">
 	<link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.css">
